--- a/src/components/Basics/style.css
+++ b/src/components/Basics/style.css
@@ -10,6 +10,7 @@ body{
     background-color: rgb(240, 183, 187);
 }
 
+/*food card styling*/
 .card-container{
     background-color: rgb(255, 255, 255);
 
